Various fixes - fix validation bug in profile - add glow to headline on userpage to provide contrast with the background - create glow class - add hideControls parameter to userShort so the follow and moderator controls can be hidden on the user page - remove extra "/" from path in page.js - remove comma in listener on userShort.js

--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -74,6 +74,13 @@ input[type=range][class~="clrS"] {
   @include textColor($text4);
 }
 
+.clrTGlow {
+  // glow around text so it is visible on low-contrast backgrounds
+  text-shadow: transparentize(invert($text), 0.6) 0 0 20px ;
+
+
+}
+
 .clrBr {
   border-color: $border;
 
